add some first components

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,14 @@
 <html>
 
 <head>
-    <title>Test App</title>
+    <title>Button</title>
+    <link rel="stylesheet" href="./static/style.css">
 </head>
 
 <body>
     <script src="./static/components.js"></script>
-    <h1>Test App</h1>
-    <styled-button id="button" label="Username"></styled-button>
+    <h1>Button</h1>
+    <styled-button id="button" label="Username">Hallo</styled-button>
 
     <styled-dialog id="dialog" label="Username"></styled-dialog>
 
