add headers to templates and static files

--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -2,11 +2,11 @@
 
 <head>
     <title>Button</title>
-    <link rel="stylesheet" href="./static/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <script src="./static/components.js"></script>
+    <script src="./components.js"></script>
     <h1>Button</h1>
     <styled-button id="button" label="Username">Hallo</styled-button>
 
